console-plugin/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frappe-console-plugin
  namespace: frappe-operator-system
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: frappe-console-plugin-cert
  labels:
    app.kubernetes.io/name: frappe-console-plugin
    app.kubernetes.io/part-of: frappe-operator
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 9443-tcp
      port: 9443
      protocol: TCP
      targetPort: 9443
  selector:
    app.kubernetes.io/name: frappe-console-plugin
